<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/bg_image_height"
        android:contentDescription="@string/bg_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back_button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/back_button_margin_x1"
        android:layout_marginTop="@dimen/back_button_margin_x3"
        android:alpha="0.5"
        android:drawablePadding="@dimen/back_button_icon_padding"
        android:fontFamily="@font/roboto_light"
        android:text="@string/back_button_view"
        android:textColor="@color/textColor"
        app:drawableStartCompat="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/top_horizontal_giudeline_10p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_round_corner_gray_color"
        android:fontFamily="@font/roboto_black"
        android:paddingStart="@dimen/pg_padding"
        android:paddingEnd="@dimen/pg_padding"
        android:paddingTop="@dimen/pg_padding"
        android:paddingBottom="@dimen/pg_padding_bottom"
        android:text="@string/pg"
        android:textColor="@color/textColor"
        android:textSize="@dimen/pg_text_size"
        app:layout_constraintBottom_toTopOf="@+id/FilmTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_horizontal_giudeline_20p" />


    <TextView
        android:id="@+id/FilmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="@dimen/standard_layout_margin_top_bottom"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:fontFamily="@font/roboto_black"
        android:shadowColor="@color/black"
        android:shadowDx="6"
        android:shadowDy="12"
        android:shadowRadius="12"
        android:text="@string/film_name"
        android:textColor="@color/textColor"
        android:textSize="@dimen/film_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pg" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_horizontal_giudeline_20p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_horizontal_giudeline_10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/janreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:text="@string/janre"
        android:textColor="@color/janreColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilmTitle" />

    <LinearLayout
        android:id="@+id/StarsReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="@dimen/standard_layout_margin_top_bottom"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/janreText">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3.25dp"
            android:contentDescription="@string/star_description"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3.25dp"
            android:contentDescription="@string/star_description"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3.25dp"
            android:contentDescription="@string/star_description"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3.25dp"
            android:contentDescription="@string/star_description"
            android:src="@drawable/ic_star_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3.25dp"
            android:contentDescription="@string/star_description"
            android:src="@drawable/ic_star_icon_off_" />

        <TextView
            android:id="@+id/reviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5.64dp"
            android:text="@string/reviews"
            android:textColor="@color/reviewTextColor"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/Storyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="@dimen/standard_layout_margin_top_bottom_x3"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:fontFamily="@font/roboto_black"
        android:shadowColor="@color/black"
        android:shadowDx="6"
        android:shadowDy="12"
        android:shadowRadius="10"
        android:text="@string/story_line"
        android:textColor="@color/textColor"
        android:textSize="@dimen/storyline_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StarsReview" />

    <TextView
        android:id="@+id/about_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="@dimen/about_film_padding"
        android:paddingBottom="@dimen/about_film_padding"
        android:text="@string/about_film"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Storyline" />


    <TextView
        android:id="@+id/CastTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="@dimen/standard_layout_margin_top_bottom_x3"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:fontFamily="@font/roboto_black"
        android:shadowColor="@color/black"
        android:text="@string/cast"
        android:textColor="@color/textColor"
        android:textSize="@dimen/cast_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_film" />

    <LinearLayout
        android:id="@+id/photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_layout_margin_start_end"
        android:layout_marginTop="@dimen/standard_layout_margin_top_bottom"
        android:layout_marginEnd="@dimen/standard_layout_margin_start_end"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/photos_padding_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CastTxt"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actor_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_actor1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:paddingTop="6dp"
                android:text="@string/actor1"
                android:textColor="@color/actorTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actor_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_actor2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:paddingTop="6dp"
                android:text="@string/actor2"
                android:textColor="@color/actorTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actor_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_actor3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:paddingTop="6dp"
                android:text="@string/actor3"
                android:textColor="@color/actorTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actor_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_actor4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:paddingTop="6dp"
                android:text="@string/actor4"
                android:textColor="@color/actorTextColor" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>